packages/web-ui/src/core/OverflowableText/index.less
.g-overflowable-text {
    position: relative;

    > .wrap-text {
        &,
        * {
            max-width: 100%;
            text-overflow: ellipsis;
            overflow: hidden;
            overflow-wrap: normal;
            white-space: nowrap;
            display: inline-block;
            line-height: 10px;
        }
    }

    > .shadow-text {
        position: fixed;
        visibility: hidden;
        z-index: -10000;
        min-width: 0;

        * {
            white-space: nowrap;
            display: inline-block;
        }
    }
}

